[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/pick_up.gd" type="Script" id=1]
[ext_resource path="res://Assets/pickup.png" type="Texture" id=2]
[ext_resource path="res://Assets/SFX/pickup.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 15.5 )

[node name="Pick-up" type="Area2D" groups=["pick_up_group"]]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, 9.53674e-07 )
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 1 )

[node name="diss" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="picked_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -14.857

[connection signal="body_entered" from="." to="." method="_on_Pickup_body_entered"]
[connection signal="timeout" from="diss" to="." method="_on_diss_timeout"]
